# algorithm

./: CMakeLists.txt  main.c
src/: main.c
src/balanced_task/: balanced_task.c  balanced_task.h
src/stack/: stack.c  stack.h
